// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Accordion Default 1`] = `
<div
  className="sc-bdfBwQ jSFOHL"
  id=""
  style={
    Object {
      "width": "300px",
    }
  }
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="sc-gsTCUz hkoBPB"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    Accordion title
    <img
      alt="chevron-icon"
      className="sc-dlfnbm blaizu"
      src="chevron.svg"
    />
  </div>
  <div
    className="sc-hKgILt dRDRsX"
  >
    <div>
      Accordion content 
      <img
        alt="test"
        src="test.jpg"
        style={
          Object {
            "width": "200px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Full Length 1`] = `
<button
  className="sc-eCssSg iZIWfU"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Full length button
  </span>
</button>
`;

exports[`Storyshots Button Icon 1`] = `
<button
  className="sc-eCssSg cahtqY"
  disabled={false}
  id=""
  onClick={[Function]}
  size="small"
  style={Object {}}
  type="button"
>
  <img
    alt=""
    className="sc-gKsewC hjbgKA"
    data-testid="button-icon"
    label=""
    src="success.svg"
  />
  
</button>
`;

exports[`Storyshots Button Large 1`] = `
<button
  className="sc-eCssSg jGPgeU"
  disabled={false}
  id=""
  onClick={[Function]}
  size="large"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    This is large button
  </span>
</button>
`;

exports[`Storyshots Button Medium 1`] = `
<button
  className="sc-eCssSg hwlEon"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Medium button
  </span>
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-eCssSg duZfVh"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Primary button
  </span>
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-eCssSg hwlEon"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Seconday button
  </span>
</button>
`;

exports[`Storyshots Button Small 1`] = `
<button
  className="sc-eCssSg cfawAC"
  disabled={false}
  id=""
  onClick={[Function]}
  size="small"
  style={Object {}}
  type="button"
>
  
  <span
    className="sc-jSgupP eUZApH"
  >
    Small button
  </span>
</button>
`;

exports[`Storyshots Button With Icon 1`] = `
<button
  className="sc-eCssSg duZfVh"
  disabled={false}
  id=""
  onClick={[Function]}
  size="medium"
  style={Object {}}
  type="button"
>
  <img
    alt=""
    className="sc-gKsewC kcRjzf"
    data-testid="button-icon"
    label="icon button"
    src="success.svg"
  />
  <span
    className="sc-jSgupP eUZApH"
  >
    icon button
  </span>
</button>
`;

exports[`Storyshots Card Default Card 1`] = `
<div
  className="sc-iBPRYJ eEgiuE"
  id=""
  style={
    Object {
      "width": "400px",
    }
  }
>
  <div>
    This is Card component
  </div>
</div>
`;

exports[`Storyshots Carousel Automatic View 1`] = `
<div
  className="sc-bqyKva kMfrLF"
  id=""
  role="listbox"
  style={Object {}}
>
  <div
    className="sc-kstrdz gsnjal"
  >
    <header
      className="sc-hBEYos emBiHA"
    >
      <h2
        className="sc-fodVxV cEBUdH"
      >
        Image slider
      </h2>
    </header>
    <div
      className="sc-idOhPF jJuNQS"
    >
      <div
        className="sc-dIUggk esxXfb"
      >
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test"
          className="sc-pFZIQ kQbCxh sc-hHftDr gzSnhl"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test1"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test1.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test2"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test2.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test3"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test3.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test4"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test4.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <button
          aria-label="click to select previous item"
          className="sc-bkzZxe jnflDh"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="left-chevron"
            src="chevron.svg"
          />
        </button>
        <button
          aria-label="click to select next item"
          className="sc-bkzZxe gvVyLk"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="right-chevron"
            src="chevron.svg"
          />
        </button>
        <span
          className="sc-dmlrTW kVmOua"
        >
          <button
            className="sc-kfzAmx cubExl"
            data-testid="bar-item-0"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-1"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-2"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-3"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-4"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel Controlled Automatic View 1`] = `
<div
  className="sc-bqyKva kMfrLF"
  id=""
  role="listbox"
  style={Object {}}
>
  <div
    className="sc-kstrdz gsnjal"
  >
    <header
      className="sc-hBEYos emBiHA"
    >
      <h2
        className="sc-fodVxV cEBUdH"
      >
        Image slider
      </h2>
      <label
        className="sc-kEjbxe dGPTTr sc-fFubgz jOPbsK"
        disabled={false}
        style={Object {}}
      >
        <input
          checked={true}
          className="sc-dQppl irVrLL"
          disabled={false}
          name=""
          onChange={[Function]}
          type="checkbox"
        />
        <span
          checked={true}
          className="sc-crrsfI eixTVm"
          data-testid="toggle-slider"
          disabled={false}
          label=""
        >
          <span
            className="sc-iqHYGH ekrIrh"
            disabled={false}
          >
            off
          </span>
          <span
            className="sc-iqHYGH ekrIrh"
          />
        </span>
      </label>
    </header>
    <div
      className="sc-idOhPF jJuNQS"
    >
      <div
        className="sc-dIUggk esxXfb"
      >
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test"
          className="sc-pFZIQ kQbCxh sc-hHftDr gzSnhl"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test1"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test1.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test2"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test2.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test3"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test3.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test4"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test4.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <button
          aria-label="click to select previous item"
          className="sc-bkzZxe jnflDh"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="left-chevron"
            src="chevron.svg"
          />
        </button>
        <button
          aria-label="click to select next item"
          className="sc-bkzZxe gvVyLk"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="right-chevron"
            src="chevron.svg"
          />
        </button>
        <span
          className="sc-dmlrTW kVmOua"
        >
          <button
            className="sc-kfzAmx cubExl"
            data-testid="bar-item-0"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-1"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-2"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-3"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-4"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel Default 1`] = `
<div
  className="sc-bqyKva kMfrLF"
  id=""
  role="listbox"
  style={Object {}}
>
  <div
    className="sc-kstrdz gsnjal"
  >
    <header
      className="sc-hBEYos emBiHA"
    >
      <h2
        className="sc-fodVxV cEBUdH"
      >
        Image slider
      </h2>
    </header>
    <div
      className="sc-idOhPF jJuNQS"
    >
      <div
        className="sc-dIUggk esxXfb"
      >
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test"
          className="sc-pFZIQ kQbCxh sc-hHftDr gzSnhl"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test1"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test1.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test2"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test2.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test3"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test3.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test4"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test4.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <button
          aria-label="click to select previous item"
          className="sc-bkzZxe jnflDh"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="left-chevron"
            src="chevron.svg"
          />
        </button>
        <button
          aria-label="click to select next item"
          className="sc-bkzZxe gvVyLk"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="right-chevron"
            src="chevron.svg"
          />
        </button>
        <span
          className="sc-dmlrTW kVmOua"
        >
          <button
            className="sc-kfzAmx cubExl"
            data-testid="bar-item-0"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-1"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-2"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-3"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-4"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel Vertical 1`] = `
<div
  className="sc-bqyKva kMfrLF"
  id=""
  role="listbox"
  style={Object {}}
>
  <div
    className="sc-kstrdz gsnjal"
  >
    <header
      className="sc-hBEYos emBiHA"
    >
      <h2
        className="sc-fodVxV cEBUdH"
      >
        Image slider
      </h2>
    </header>
    <div
      className="sc-idOhPF jJuNQS"
    >
      <div
        className="sc-dIUggk iUPiTK"
      >
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test"
          className="sc-pFZIQ kQbCxh sc-hHftDr gzSnhl"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test1"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test1.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test2"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test2.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test3"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test3.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test4"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test4.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <button
          aria-label="click to select previous item"
          className="sc-bkzZxe jnflDh"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="left-chevron"
            src="chevron.svg"
          />
        </button>
        <button
          aria-label="click to select next item"
          className="sc-bkzZxe gvVyLk"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="right-chevron"
            src="chevron.svg"
          />
        </button>
        <span
          className="sc-dmlrTW kVmOua"
        >
          <button
            className="sc-kfzAmx cubExl"
            data-testid="bar-item-0"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-1"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-2"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-3"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-4"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel With Previews 1`] = `
<div
  className="sc-bqyKva kMfrLF"
  id=""
  role="listbox"
  style={Object {}}
>
  <div
    className="sc-kstrdz gsnjal"
  >
    <header
      className="sc-hBEYos emBiHA"
    >
      <h2
        className="sc-fodVxV cEBUdH"
      >
        Image slider
      </h2>
    </header>
    <div
      className="sc-idOhPF jJuNQS"
    >
      <div
        className="sc-fKFyDc cBaQbZ"
      >
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="preview-test3"
          className="sc-pFZIQ bQXCuZ sc-bBXqnf hYuIeJ"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="button"
          src="test3.jpg"
          style={Object {}}
          tabIndex={0}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="preview-test4"
          className="sc-pFZIQ bQXCuZ sc-bBXqnf hYuIeJ"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="button"
          src="test4.jpg"
          style={Object {}}
          tabIndex={0}
        />
      </div>
      <div
        className="sc-dIUggk esxXfb"
      >
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test"
          className="sc-pFZIQ kQbCxh sc-hHftDr gzSnhl"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test1"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test1.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test2"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test2.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test3"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test3.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="image-test4"
          className="sc-pFZIQ kQbCxh sc-hHftDr exyjVR"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="img"
          src="test4.jpg"
          style={Object {}}
          tabIndex={-1}
        />
        <button
          aria-label="click to select previous item"
          className="sc-bkzZxe jnflDh"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="left-chevron"
            src="chevron.svg"
          />
        </button>
        <button
          aria-label="click to select next item"
          className="sc-bkzZxe gvVyLk"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <img
            alt="right-chevron"
            src="chevron.svg"
          />
        </button>
        <span
          className="sc-dmlrTW kVmOua"
        >
          <button
            className="sc-kfzAmx cubExl"
            data-testid="bar-item-0"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-1"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-2"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-3"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
          <button
            className="sc-kfzAmx fhILVt"
            data-testid="bar-item-4"
            onClick={[Function]}
            onKeyDown={[Function]}
          />
        </span>
      </div>
      <div
        className="sc-fKFyDc cBaQbZ"
      >
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="preview-test1"
          className="sc-pFZIQ bQXCuZ sc-bBXqnf hYuIeJ"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="button"
          src="test1.jpg"
          style={Object {}}
          tabIndex={0}
        />
        <div
          className="sc-jrAGrp kfNnjS"
          data-testid="image-placeholder"
        />
        <img
          alt="preview-test2"
          className="sc-pFZIQ bQXCuZ sc-bBXqnf hYuIeJ"
          data-testid="image"
          id=""
          loading="lazy"
          onClick={[Function]}
          onKeyDown={[Function]}
          onLoad={[Function]}
          role="button"
          src="test2.jpg"
          style={Object {}}
          tabIndex={0}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<label
  className="sc-iwyYcG hJIrvn"
  disabled={false}
  id=""
  style={Object {}}
>
  <input
    checked={false}
    className="sc-iJuUWI hYSbwM"
    disabled={false}
    name="Checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    className="sc-lmoMRL hbPWCs"
    disabled={false}
  />
  Checkbox
</label>
`;

exports[`Storyshots Dropdown Default 1`] = `
<div
  className="sc-giIncl hzqteE"
>
  <div
    className="sc-ezrdKe evRLut"
    disabled={false}
  >
    <img
      alt="chevron-icon"
      src="chevron.svg"
    />
    <select
      aria-label="Select "
      className="sc-kLgntA kaKpLX"
      disabled={false}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      value=""
    >
      <option
        className="sc-iktFzd iQuNyb"
        hidden={true}
        value=""
      >
        select an option
      </option>
      <option
        className="sc-iktFzd iQuNyb"
        data-testid="select-option"
        value="option 1"
      >
        option 1
      </option>
      <option
        className="sc-iktFzd iQuNyb"
        data-testid="select-option"
        value="option 2"
      >
        option 2
      </option>
      <option
        className="sc-iktFzd iQuNyb"
        data-testid="select-option"
        value="option 3"
      >
        option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown With Label 1`] = `
<div
  className="sc-giIncl hzqteE"
>
  <label
    className="sc-bYEvPH hnGVfe"
    disabled={false}
    htmlFor="Example"
  >
    Example
  </label>
  <div
    className="sc-ezrdKe evRLut"
    disabled={false}
  >
    <img
      alt="chevron-icon"
      src="chevron.svg"
    />
    <select
      aria-label="Select Example"
      className="sc-kLgntA kaKpLX"
      disabled={false}
      name="Example"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      value=""
    >
      <option
        className="sc-iktFzd iQuNyb"
        hidden={true}
        value=""
      >
        select an option
      </option>
      <option
        className="sc-iktFzd iQuNyb"
        data-testid="select-option"
        value="option 1"
      >
        option 1
      </option>
      <option
        className="sc-iktFzd iQuNyb"
        data-testid="select-option"
        value="option 2"
      >
        option 2
      </option>
      <option
        className="sc-iktFzd iQuNyb"
        data-testid="select-option"
        value="option 3"
      >
        option 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots DropdownMultiselection Default 1`] = `
<div
  className="sc-jJEJSO cMHBul"
  id=""
  style={Object {}}
>
  <div
    aria-expanded={false}
    aria-label="Select select an option"
    className="sc-hiSbYr lkACOM"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div>
      select an option
    </div>
    <img
      alt="chevron-icon"
      className="sc-gWHgXt iuoXAo"
      src="chevron.svg"
    />
  </div>
</div>
`;

exports[`Storyshots DropdownMultiselection Single Selection 1`] = `
<div
  className="sc-jJEJSO cMHBul"
  id=""
  style={Object {}}
>
  <div
    aria-expanded={false}
    aria-label="Select select an option"
    className="sc-hiSbYr lkACOM"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div>
      select an option
    </div>
    <img
      alt="chevron-icon"
      className="sc-gWHgXt iuoXAo"
      src="chevron.svg"
    />
  </div>
</div>
`;

exports[`Storyshots Emoji Default 1`] = `
<div
  aria-hidden="false"
  aria-label="smiley"
  className="sc-jcVebW jbcpGp"
  role="img"
>
  😃
</div>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="sc-eCssSg cfawAC"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        
        <span
          className="sc-jSgupP eUZApH"
        >
          Log out
        </span>
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="sc-eCssSg cfawAC"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        
        <span
          className="sc-jSgupP eUZApH"
        >
          Log in
        </span>
      </button>
      <button
        className="sc-eCssSg cahtqY"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        
        <span
          className="sc-jSgupP eUZApH"
        >
          Sign up
        </span>
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="sc-eCssSg cfawAC"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            Log out
          </span>
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://www.learnstorybook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn Storybook
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="sc-eCssSg cfawAC"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            Log in
          </span>
        </button>
        <button
          className="sc-eCssSg cahtqY"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            Sign up
          </span>
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the "args" of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://www.learnstorybook.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn Storybook
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Image Clickable 1`] = `
Array [
  <div
    className="sc-jrAGrp kfNnjS"
    data-testid="image-placeholder"
  />,
  <img
    alt=""
    className="sc-pFZIQ bQXCuZ"
    data-testid="image"
    id=""
    loading="lazy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onLoad={[Function]}
    role="button"
    src="test.jpg"
    style={
      Object {
        "width": "300px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`Storyshots Image Default 1`] = `
Array [
  <div
    className="sc-jrAGrp kfNnjS"
    data-testid="image-placeholder"
  />,
  <img
    alt=""
    className="sc-pFZIQ kQbCxh"
    data-testid="image"
    id=""
    loading="lazy"
    onClick={[Function]}
    onKeyDown={[Function]}
    onLoad={[Function]}
    role="img"
    src="test.jpg"
    style={
      Object {
        "width": "300px",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`Storyshots Image Zoomable 1`] = `
<div
  style={
    Object {
      "height": "200px",
      "width": "300px",
    }
  }
>
  <div
    className="sc-fubCfw kVPOkw"
  >
    <div
      className="sc-jrAGrp kfNnjS"
      data-testid="image-placeholder"
    />
    <img
      alt=""
      className="sc-pFZIQ jPrxKL"
      data-testid="image"
      id=""
      loading="lazy"
      onClick={[Function]}
      onKeyDown={[Function]}
      onLoad={[Function]}
      role="img"
      src="test.jpg"
      style={
        Object {
          "width": "300px",
        }
      }
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  className="sc-bZSQDF bDUkHv"
>
  
  <div
    className="sc-iUuytg iCvKEl"
    disabled={false}
  >
    <input
      autoComplete="off"
      autoFocus={false}
      className="sc-iBaPrD iMMOcP"
      data-testid="input-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      style={Object {}}
      type="text"
      value="hello"
    />
    
  </div>
</div>
`;

exports[`Storyshots Input With Error 1`] = `
<div
  className="sc-bZSQDF bDUkHv"
>
  
  <div
    className="sc-iUuytg iCvKEl"
    disabled={false}
  >
    <input
      autoComplete="off"
      autoFocus={false}
      className="sc-iBaPrD eumgQd"
      data-testid="input-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      style={Object {}}
      type="text"
      value="hello"
    />
    
  </div>
  <p
    className="sc-jNMdTA dnuyLY"
  >
    This is an error!
  </p>
</div>
`;

exports[`Storyshots Input With Icon 1`] = `
<div
  className="sc-bZSQDF bDUkHv"
>
  
  <div
    className="sc-iUuytg iCvKEl"
    disabled={false}
  >
    <input
      autoComplete="off"
      autoFocus={false}
      className="sc-iBaPrD iMMOcP"
      data-testid="input-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      style={Object {}}
      type="text"
      value="hello"
    />
    <img
      alt=""
      className="sc-cTkwdZ kqDjbn"
      data-testid="input-icon"
      role=""
      src="success.svg"
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`Storyshots Input With Label 1`] = `
<div
  className="sc-bZSQDF bDUkHv"
>
  <label
    className="sc-eggNIi cjSYih"
    disabled={false}
    htmlFor=""
  >
    Input
  </label>
  <div
    className="sc-iUuytg iCvKEl"
    disabled={false}
  >
    <input
      autoComplete="off"
      autoFocus={false}
      className="sc-iBaPrD iMMOcP"
      data-testid="input-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder=""
      style={Object {}}
      type="text"
      value="hello"
    />
    
  </div>
</div>
`;

exports[`Storyshots Modal Confirmation 1`] = `
<div
  className="sc-dOSReg iRCnme"
>
  <div
    className="sc-bBrOnJ dFMJdq"
  >
    <div
      className="sc-cOajty bqlfHM"
      id=""
      style={Object {}}
    >
      <header
        className="sc-AzgDb jMdEnB"
      >
        <h2
          className="sc-khAkjo huPIAY"
        >
          Confirmation Modal Header
        </h2>
        <button
          aria-label="close modal"
          className="sc-eCssSg hwlEon sc-hTZhsR ipqzKT"
          disabled={false}
          id=""
          onClick={[Function]}
          size="medium"
          style={Object {}}
          type="button"
        >
          <img
            alt=""
            className="sc-gKsewC hjbgKA"
            data-testid="button-icon"
            label=""
            src="close.svg"
          />
          
        </button>
      </header>
      <main>
        <p
          className="sc-jgHCyG iTbjxD"
        >
          Confirmation modal content
        </p>
      </main>
      <footer
        className="sc-gTgzIj gXUtWS"
      >
        <button
          className="sc-eCssSg cfawAC sc-laRPJI cugBGV"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            confirm
          </span>
        </button>
        <button
          className="sc-eCssSg cfawAC sc-laRPJI fWcGvW"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            decline
          </span>
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="sc-dOSReg iRCnme"
>
  <div
    className="sc-bBrOnJ dFMJdq"
  >
    <div
      className="sc-cOajty bqlfHM"
      id=""
      style={Object {}}
    >
      <header
        className="sc-AzgDb jMdEnB"
      >
        <h2
          className="sc-khAkjo huPIAY"
        >
          Modal Header
        </h2>
        <button
          aria-label="close modal"
          className="sc-eCssSg hwlEon sc-hTZhsR ipqzKT"
          disabled={false}
          id=""
          onClick={[Function]}
          size="medium"
          style={Object {}}
          type="button"
        >
          <img
            alt=""
            className="sc-gKsewC hjbgKA"
            data-testid="button-icon"
            label=""
            src="close.svg"
          />
          
        </button>
      </header>
      <main>
        <p
          className="sc-jgHCyG iTbjxD"
        >
          Modal content
        </p>
      </main>
      <footer
        className="sc-gTgzIj gXUtWS"
      >
        <button
          className="sc-eCssSg cfawAC sc-laRPJI cugBGV"
          disabled={false}
          id=""
          onClick={[Function]}
          size="small"
          style={Object {}}
          type="button"
        >
          
          <span
            className="sc-jSgupP eUZApH"
          >
            ok
          </span>
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Storyshots RadioButton Default 1`] = `
<label
  aria-checked={false}
  className="sc-iNqMTl hqWrcK"
>
  <input
    checked={false}
    className="sc-eJMQSu iyYPJB"
    data-testid="radio-button"
    disabled={false}
    name=""
    onChange={[Function]}
    style={Object {}}
    type="radio"
    value=""
  />
  <span
    className="sc-jeGSBP kxbQCY"
    disabled={false}
  />
  option 1
</label>
`;

exports[`Storyshots RadioButtonGroup Default 1`] = `
<div
  className="sc-nFpLZ kTPPWw"
  id=""
  role="radiogroup"
  style={Object {}}
>
  <h3
    className="sc-higXBA gvQNNA"
  >
    radio group
  </h3>
  <div
    className="sc-ehSCib jcTlUK"
  >
    <label
      aria-checked={false}
      className="sc-iNqMTl hqWrcK"
    >
      <input
        checked={false}
        className="sc-eJMQSu iyYPJB"
        data-testid="radio-button"
        disabled={false}
        name="name 1"
        onChange={[Function]}
        style={Object {}}
        type="radio"
        value="option 1"
      />
      <span
        className="sc-jeGSBP kxbQCY"
        disabled={false}
      />
      option 1
    </label>
    <label
      aria-checked={false}
      className="sc-iNqMTl hqWrcK"
    >
      <input
        checked={false}
        className="sc-eJMQSu iyYPJB"
        data-testid="radio-button"
        disabled={false}
        name="name 2"
        onChange={[Function]}
        style={Object {}}
        type="radio"
        value="option 2"
      />
      <span
        className="sc-jeGSBP kxbQCY"
        disabled={false}
      />
      option 2
    </label>
    <label
      aria-checked={false}
      className="sc-iNqMTl hqWrcK"
    >
      <input
        checked={false}
        className="sc-eJMQSu iyYPJB"
        data-testid="radio-button"
        disabled={false}
        name="name 3"
        onChange={[Function]}
        style={Object {}}
        type="radio"
        value="option 3"
      />
      <span
        className="sc-jeGSBP kxbQCY"
        disabled={false}
      />
      option 3
    </label>
  </div>
</div>
`;

exports[`Storyshots RadioButtonGroup Vertical 1`] = `
<div
  className="sc-nFpLZ kTPPWw"
  id=""
  role="radiogroup"
  style={Object {}}
>
  <h3
    className="sc-higXBA gvQNNA"
  >
    radio group
  </h3>
  <div
    className="sc-ehSCib ikXJg"
  >
    <label
      aria-checked={false}
      className="sc-iNqMTl hqWrcK"
    >
      <input
        checked={false}
        className="sc-eJMQSu iyYPJB"
        data-testid="radio-button"
        disabled={false}
        name="name 1"
        onChange={[Function]}
        style={Object {}}
        type="radio"
        value="option 1"
      />
      <span
        className="sc-jeGSBP kxbQCY"
        disabled={false}
      />
      option 1
    </label>
    <label
      aria-checked={false}
      className="sc-iNqMTl hqWrcK"
    >
      <input
        checked={false}
        className="sc-eJMQSu iyYPJB"
        data-testid="radio-button"
        disabled={false}
        name="name 2"
        onChange={[Function]}
        style={Object {}}
        type="radio"
        value="option 2"
      />
      <span
        className="sc-jeGSBP kxbQCY"
        disabled={false}
      />
      option 2
    </label>
    <label
      aria-checked={false}
      className="sc-iNqMTl hqWrcK"
    >
      <input
        checked={false}
        className="sc-eJMQSu iyYPJB"
        data-testid="radio-button"
        disabled={false}
        name="name 3"
        onChange={[Function]}
        style={Object {}}
        type="radio"
        value="option 3"
      />
      <span
        className="sc-jeGSBP kxbQCY"
        disabled={false}
      />
      option 3
    </label>
  </div>
</div>
`;

exports[`Storyshots Search Default 1`] = `
<div
  className="sc-lcujXC gxvajg"
>
  
  <div
    className="sc-clsHhM igOajr"
  >
    <input
      className="sc-fbkhIv fjvJIq"
      data-testid="search-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={Object {}}
      type="search"
      value=""
    />
    <div
      className="sc-GqfZa jFICcw"
    >
      <img
        alt="magnifying-glass-icon"
        className="sc-fWSCIC iCicyH"
        data-testid="search-icon"
        onClick={[Function]}
        src="magnifying-glass.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Search Expansible 1`] = `
<div
  className="sc-lcujXC gxvajg"
>
  
  <div
    className="sc-clsHhM fTzrML"
  >
    <input
      className="sc-fbkhIv cvtVZ"
      data-testid="search-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={Object {}}
      type="search"
      value=""
    />
    <div
      className="sc-GqfZa jFICcw"
    >
      <img
        alt="magnifying-glass-icon"
        className="sc-fWSCIC ctniQT"
        data-testid="search-icon"
        onClick={[Function]}
        src="magnifying-glass.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Search With Label 1`] = `
<div
  className="sc-lcujXC gxvajg"
>
  <label
    className="sc-gGmIRh eHkCUA"
    disabled={false}
    htmlFor=""
  >
    Search
  </label>
  <div
    className="sc-clsHhM igOajr"
  >
    <input
      className="sc-fbkhIv fjvJIq"
      data-testid="search-field"
      disabled={false}
      id=""
      maxLength={150}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      style={Object {}}
      type="search"
      value=""
    />
    <div
      className="sc-GqfZa jFICcw"
    >
      <img
        alt="magnifying-glass-icon"
        className="sc-fWSCIC iUcNib"
        data-testid="search-icon"
        onClick={[Function]}
        src="magnifying-glass.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots ShowMore With List 1`] = `
<div
  className="sc-dwfUOf guUNTr"
  id=""
  style={Object {}}
>
  <div
    className="sc-aemoO hMUSgf"
    style={
      Object {
        "maxHeight": "5.6rem",
      }
    }
  >
    <ul>
      <li>
        item 1
      </li>
      <li>
        item 2
      </li>
      <li>
        item 3
      </li>
      <li>
        item 4
      </li>
      <li>
        item 5
      </li>
      <li>
        item 6
      </li>
    </ul>
  </div>
  <a
    className="sc-TmcTc ldWWwU"
    data-testid="show-more-link"
    href=""
    onClick={[Function]}
  >
    show more
     
    <img
      alt="show more icon"
      className="sc-jHVexB dSbrVO"
      src="double-chevron.svg"
    />
  </a>
</div>
`;

exports[`Storyshots ShowMore With String 1`] = `
<div
  className="sc-dwfUOf guUNTr"
  id=""
  style={Object {}}
>
  <div
    className="sc-aemoO hMUSgf"
    style={
      Object {
        "maxHeight": "5.6rem",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae mollis velit. Vestibulum lacinia nisi vitae lorem sollicitudin, vel ultricies enim suscipit. Etiam vel sodales dolor. Nunc iaculis quis arcu faucibus tincidunt. Maecenas blandit dapibus porttitor. Quisque sed mauris elit. Ut placerat, augue ut blandit ultricies, nunc nulla vehicula mi, in vehicula urna lectus nec nibh. Aenean quis risus imperdiet, bibendum mauris vitae, consequat tortor. Donec aliquam ante vel turpis fringilla facilisis. Integer varius non lacus id ultrices. In eleifend dolor ante, congue placerat elit maximus eget. Duis varius ligula erat, et varius neque euismod ac. In vitae posuere nisl. Sed non justo tortor.
  Integer risus est, feugiat at ultrices vitae, pretium in est. In vel tristique augue. Nam tempor neque erat, vitae cursus diam eleifend non. Aliquam libero odio, vestibulum at nunc sit amet, suscipit suscipit libero. Nam ac pretium felis, eu convallis libero. Phasellus quis odio sit amet nibh tempor placerat non sed nunc. Aliquam pellentesque efficitur iaculis. Cras eget gravida leo.
  Ut sed mattis erat. In in nunc eu ligula egestas viverra. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur fermentum sem mauris, semper consequat urna sagittis sed. Maecenas lacinia nulla lorem, quis condimentum orci ultricies quis. Aliquam erat volutpat. Vestibulum volutpat, metus quis malesuada lobortis, quam erat accumsan lectus, nec bibendum leo libero facilisis risus. Nulla sed viverra orci.
  </div>
  <a
    className="sc-TmcTc ldWWwU"
    data-testid="show-more-link"
    href=""
    onClick={[Function]}
  >
    show more
     
    <img
      alt="show more icon"
      className="sc-jHVexB dSbrVO"
      src="double-chevron.svg"
    />
  </a>
</div>
`;

exports[`Storyshots Step Default 1`] = `
<div
  className="sc-jONnTn jFjTYn"
  id=""
  style={Object {}}
>
  <div>
    Step 
  </div>
</div>
`;

exports[`Storyshots Stepper Landscape 1`] = `
<div
  className="sc-hlTvYk edSNmw"
  data-steps={3}
  id=""
  style={Object {}}
>
  <ul
    aria-label="progress"
    className="sc-eLgOdN khzXKX"
    role="group"
  >
    <progress
      className="sc-kIeTtH fKFLSP"
      max="100"
      value={0}
    />
    <li
      aria-current="step"
      className="sc-bTvRPi hPTHOZ"
    >
      1
    </li>
    <li
      aria-current="step"
      className="sc-bTvRPi curnWm"
    >
      2
    </li>
    <li
      aria-current="step"
      className="sc-bTvRPi curnWm"
    >
      3
    </li>
  </ul>
  <div
    className="sc-hOqqkJ gpWiFp"
  >
    <div
      className="sc-dtwoBo faegEb"
    >
      <div
        className="sc-jONnTn jFjTYn"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 1 content
        </p>
      </div>
      <div
        className="sc-jONnTn gsYcnR"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 2 content
        </p>
      </div>
      <div
        className="sc-jONnTn gsYcnR"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 3 content
        </p>
      </div>
    </div>
    <footer
      className="sc-dacFzL gljwKY"
    >
      <button
        className="sc-eCssSg cfawAC sc-jUEnpm sc-jQbIHB jXbMLx iRQBZM"
        data-testid="next-button"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        <img
          alt=""
          className="sc-gKsewC hjbgKA"
          data-testid="button-icon"
          label=""
          src="double-chevron.svg"
        />
        
      </button>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Stepper Vertical 1`] = `
<div
  className="sc-hlTvYk delIEU"
  data-steps={3}
  id=""
  style={Object {}}
>
  <ul
    aria-label="progress"
    className="sc-eLgOdN hmtaxx"
    role="group"
  >
    <progress
      className="sc-kIeTtH dPyHJu"
      max="100"
      value={0}
    />
    <li
      aria-current="step"
      className="sc-bTvRPi hPTHOZ"
    >
      1
    </li>
    <li
      aria-current="step"
      className="sc-bTvRPi curnWm"
    >
      2
    </li>
    <li
      aria-current="step"
      className="sc-bTvRPi curnWm"
    >
      3
    </li>
  </ul>
  <div
    className="sc-hOqqkJ eTrafe"
  >
    <div
      className="sc-dtwoBo faegEb"
    >
      <div
        className="sc-jONnTn jFjTYn"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 1 content
        </p>
      </div>
      <div
        className="sc-jONnTn gsYcnR"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 2 content
        </p>
      </div>
      <div
        className="sc-jONnTn gsYcnR"
        id=""
        style={Object {}}
      >
        <p
          style={
            Object {
              "margin": "100px auto",
              "textAlign": "center",
            }
          }
        >
          Step 3 content
        </p>
      </div>
    </div>
    <footer
      className="sc-dacFzL gljwKY"
    >
      <button
        className="sc-eCssSg cfawAC sc-jUEnpm sc-jQbIHB jXbMLx iRQBZM"
        data-testid="next-button"
        disabled={false}
        id=""
        onClick={[Function]}
        size="small"
        style={Object {}}
        type="button"
      >
        <img
          alt=""
          className="sc-gKsewC hjbgKA"
          data-testid="button-icon"
          label=""
          src="double-chevron.svg"
        />
        
      </button>
    </footer>
  </div>
</div>
`;

exports[`Storyshots Tab Active 1`] = `
<ul
  style={
    Object {
      "listStyle": "none",
    }
  }
>
  <li
    aria-selected={true}
    className="sc-fvhGYg fbfHto"
    disabled={false}
    id=""
    onClick={[Function]}
    onKeyDown={[Function]}
    role="tab"
    style={Object {}}
    tabIndex={0}
  >
    Tab 1
  </li>
</ul>
`;

exports[`Storyshots Tab Default 1`] = `
<ul
  style={
    Object {
      "listStyle": "none",
    }
  }
>
  <li
    aria-selected={false}
    className="sc-fvhGYg dJgDHN"
    disabled={false}
    id=""
    onClick={[Function]}
    onKeyDown={[Function]}
    role="tab"
    style={Object {}}
    tabIndex={0}
  >
    Tab 1
  </li>
</ul>
`;

exports[`Storyshots Tabs Default 1`] = `
<div
  className="sc-fbNXWD HCDUf"
  id=""
  style={Object {}}
>
  <div
    className="sc-GTWni dorGIi"
  >
    <ul
      aria-label="Select "
      className="sc-gsxnyZ eOjUYq"
      role="tablist"
    >
      <li
        aria-selected={true}
        className="sc-fvhGYg fbfHto"
        disabled={false}
        id=""
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        style={Object {}}
        tabIndex={0}
      >
        Tab 1
      </li>
      <li
        aria-selected={false}
        className="sc-fvhGYg dJgDHN"
        disabled={false}
        id=""
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        style={Object {}}
        tabIndex={0}
      >
        Tab 2
      </li>
    </ul>
  </div>
  <div
    aria-labelledby="Tab 1"
    className="sc-bXDlPE"
    role="tabpanel"
  >
    <div
      className="sc-eGCarw bpSxEV"
    />
    <div>
      Tab 1 content
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea Default 1`] = `
<div
  className="sc-ctaXAZ jTKgHu"
>
  <textarea
    className="sc-dFJsGO ilhJpt"
    data-testid="textarea-field"
    disabled={false}
    id=""
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    rows={5}
    style={Object {}}
    value="hello"
  />
</div>
`;

exports[`Storyshots Textarea With Error 1`] = `
<div
  className="sc-ctaXAZ jTKgHu"
>
  <textarea
    className="sc-dFJsGO hlHcpj"
    data-testid="textarea-field"
    disabled={false}
    id=""
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    rows={5}
    style={Object {}}
    value="hello"
  />
  <p
    className="sc-gInsOo hqurnP"
  >
    This is an error!
  </p>
</div>
`;

exports[`Storyshots Textarea With Label 1`] = `
<div
  className="sc-ctaXAZ jTKgHu"
>
  <label
    className="sc-bsipQr crRaCU"
    disabled={false}
    htmlFor=""
  >
    Textarea
  </label>
  <textarea
    className="sc-dFJsGO ilhJpt"
    data-testid="textarea-field"
    disabled={false}
    id=""
    name=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    rows={5}
    style={Object {}}
    value="hello"
  />
</div>
`;

exports[`Storyshots Toast Alert 1`] = `
<div
  className="sc-euMpXR gsQqnM"
  id=""
  style={Object {}}
  type="alert"
>
  <button
    className="sc-eCssSg cfawAC sc-fHuLdG dUYRmA"
    disabled={false}
    id=""
    onClick={[Function]}
    size="small"
    style={Object {}}
    type="button"
  >
    <img
      alt=""
      className="sc-gKsewC hjbgKA"
      data-testid="button-icon"
      label=""
      src="close-white.svg"
    />
    
  </button>
  <div
    className="sc-XhUPp eSvVaH"
  >
    <img
      alt="alert.svg icon"
      className="sc-dtTInj jrvpXa"
      src="alert.svg"
    />
    <div
      className="sc-dkIXFM cPwfUG"
      type="alert"
    >
      alert toast
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast Info 1`] = `
<div
  className="sc-euMpXR kvHlUp"
  id=""
  style={Object {}}
  type="info"
>
  <button
    className="sc-eCssSg cfawAC sc-fHuLdG dUYRmA"
    disabled={false}
    id=""
    onClick={[Function]}
    size="small"
    style={Object {}}
    type="button"
  >
    <img
      alt=""
      className="sc-gKsewC hjbgKA"
      data-testid="button-icon"
      label=""
      src="close-white.svg"
    />
    
  </button>
  <div
    className="sc-XhUPp eSvVaH"
  >
    <img
      alt="info.svg icon"
      className="sc-dtTInj jrvpXa"
      src="info.svg"
    />
    <div
      className="sc-dkIXFM cPwfUG"
      type="info"
    >
      info toast
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast Success 1`] = `
<div
  className="sc-euMpXR cclTRh"
  id=""
  style={Object {}}
  type="success"
>
  <button
    className="sc-eCssSg cfawAC sc-fHuLdG dUYRmA"
    disabled={false}
    id=""
    onClick={[Function]}
    size="small"
    style={Object {}}
    type="button"
  >
    <img
      alt=""
      className="sc-gKsewC hjbgKA"
      data-testid="button-icon"
      label=""
      src="close-white.svg"
    />
    
  </button>
  <div
    className="sc-XhUPp eSvVaH"
  >
    <img
      alt="success.svg icon"
      className="sc-dtTInj jrvpXa"
      src="success.svg"
    />
    <div
      className="sc-dkIXFM cPwfUG"
      type="success"
    >
      success toast
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast Warning 1`] = `
<div
  className="sc-euMpXR fuBoMH"
  id=""
  style={Object {}}
  type="warning"
>
  <button
    className="sc-eCssSg cfawAC sc-fHuLdG dUYRmA"
    disabled={false}
    id=""
    onClick={[Function]}
    size="small"
    style={Object {}}
    type="button"
  >
    <img
      alt=""
      className="sc-gKsewC hjbgKA"
      data-testid="button-icon"
      label=""
      src="close-white.svg"
    />
    
  </button>
  <div
    className="sc-XhUPp eSvVaH"
  >
    <img
      alt="warning.svg icon"
      className="sc-dtTInj jrvpXa"
      src="warning.svg"
    />
    <div
      className="sc-dkIXFM cPwfUG"
      type="warning"
    >
      warning toast
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleSwitch Default 1`] = `
<label
  className="sc-kEjbxe dGPTTr"
  disabled={false}
  style={Object {}}
>
  <input
    checked={false}
    className="sc-dQppl irVrLL"
    disabled={false}
    name=""
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={false}
    className="sc-crrsfI jSxQgm"
    data-testid="toggle-slider"
    disabled={false}
    label=""
  >
    <span
      className="sc-iqHYGH ekrIrh"
      disabled={false}
    />
    <span
      className="sc-iqHYGH ekrIrh"
    >
      on
    </span>
  </span>
</label>
`;

exports[`Storyshots ToggleSwitch With Label 1`] = `
<label
  className="sc-kEjbxe dGPTTr"
  disabled={false}
  style={Object {}}
>
  <input
    checked={false}
    className="sc-dQppl irVrLL"
    disabled={false}
    name="ToggleSwitch"
    onChange={[Function]}
    type="checkbox"
  />
  ToggleSwitch
  <span
    checked={false}
    className="sc-crrsfI gZNITy"
    data-testid="toggle-slider"
    disabled={false}
    label="ToggleSwitch"
  >
    <span
      className="sc-iqHYGH ekrIrh"
      disabled={false}
    />
    <span
      className="sc-iqHYGH ekrIrh"
    >
      on
    </span>
  </span>
</label>
`;

exports[`Storyshots Tooltip Default 1`] = `
<div
  className="sc-ikPAkQ gHUbPD"
  id=""
  style={
    Object {
      "marginLeft": "100px",
    }
  }
>
  Tooltip
</div>
`;

exports[`Storyshots Upload Default 1`] = `
<div
  className="sc-jGVbCA ilYyKM"
>
  <button
    className="sc-eCssSg hwlEon sc-tYoTV bvXDe"
    disabled={false}
    id=""
    onClick={[Function]}
    size="medium"
    style={Object {}}
    type="button"
  >
    
    <span
      className="sc-jSgupP eUZApH"
    >
      Upload
    </span>
  </button>
  <input
    accept=""
    aria-label="File upload"
    className="sc-biBrSq lhHYAG"
    multiple={false}
    onChange={[Function]}
    type="file"
  />
</div>
`;
